refactor: DTO 下沉 + Bug 修复（P0/P1/P2）+ SKU 模块 + 前端完善
主要改动：

1. DTO 下沉重构（5 模块统一规范）
   - lot/inventory/alert/sku/common 的 Controller 内联 record 全部移至 api/dto/ 包
   - 新增 14 个独立 dto 文件，Controller 只负责路由和转换
   - 清理冗余 import

2. Bug 修复（code-review + ponytail 评审）
   - Bug 16 (P0): RedisFefoStrategy 缺过期过滤，致 FEFO 出库整体崩溃
   - Bug 17 (P1): t_mq_consume_log 主键改为联合主键 (message_id, consumer)
   - Bug 18 (P1): outboundLot 工具描述删除不存在的 transferLot 引用
   - Bug 19 (P1): 多批出库 LotOutboundResult 新增 batches 字段，逐批写流转记录
   - P2: adjustStock 加 Propagation.REQUIRES_NEW，保障乐观锁重试生效

3. SKU 模块（新增限界上下文）
   - 商品主数据 CRUD：api/application/domain/infrastructure 四层
   - SkuController + SkuAppService + Sku 聚合根 + SkuMapper

4. AI 模块增强
   - NongpiManus 历史持久化到 Redis（manus:history:{chatId}，TTL 1h）
   - RagConfig 文档分块与向量化
   - NongpiToolSet 工具描述修正

5. 前端完善
   - SKU 管理页 + TransferDialog 转库对话框
   - 登录页/批次页/AI 面板优化